--- a/bolum2_karar/index.html
+++ b/bolum2_karar/index.html
@@ -3,15 +3,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Javascipt ilk kodlar</title>
+    <title>Karar</title>
   </head>
   <body>
-    <h1>Javascript</h1>
-    <!-- * script etiketleri arasında js kodları inline olarak yazılabilir -->
-    <script>
-      console.log("Inline JS");
-      console.warn("Inline JS daha az tercih edilir.");
-    </script>
+    <h1>Karar</h1>
+
+    <script></script>
 
     <!-- ! Ya da harici bir dosya olarak çağrılabilir.  -->
     <script src="app.js"></script>
